Completed Day 9 Exercises

--- a/20240517/index.html
+++ b/20240517/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
-  <script src="associativity.js"></script>
+  <script src="day9_afternoon_exercises.js"></script>
 </head>
 <body>
 </body>
