Day 10 exercises and fix previous indexes

--- a/20240516/index.html
+++ b/20240516/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
-  <script src="day8_exercise_3.js"></script>
+  <!-- <script src="day8_exercise_2.js"></script> -->
+  <!-- <script src="day8_exercise_3.js"></script> -->
+  <script src="day8_exercise_4.js"></script>
 </head>
 <body>
 </body>
