--- a/20240516/index.html
+++ b/20240516/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Document</title>
-  <!-- <script src="day8_exercise_2.js"></script> -->
-  <!-- <script src="day8_exercise_3.js"></script> -->
-  <script src="day8_exercise_4.js"></script>
-</head>
-<body>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Document</title>
+    <!-- <script src="day8_exercise_2.js"></script> -->
+    <!-- <script src="day8_exercise_3.js"></script> -->
+    <script src="day8_exercise_4.js"></script>
+  </head>
+  <body></body>
 </html>
