--- a/20240517/index.html
+++ b/20240517/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Document</title>
-  <!-- <script src="day9_afternoon_exercises.js"></script> -->
-  <!-- <script src="day9_afternoon_exercises.js"></script> -->
-</head>
-<body>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Document</title>
+    <!-- <script src="day9_afternoon_exercises.js"></script> -->
+    <!-- <script src="day9_afternoon_exercises.js"></script> -->
+  </head>
+  <body></body>
 </html>
