--- a/20240529/afternoon/exercise_5.html
+++ b/20240529/afternoon/exercise_5.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Exercise: Your Choice</title>
   <link rel="stylesheet" href="css/styles2.css" />
-  <script src="javascript/exercise_5.js" defer></script>
+  <script src="javascript/exercise_5_simpler.js" defer></script>
+  <!-- NOT WORKING <script src="javascript/exercise_5_simpler.js" defer></script> -->
 </head>
 
 <!-- Exercise 5: Your Choice:
