--- a/20240530/exercise 2_3/index.html
+++ b/20240530/exercise 2_3/index.html
@@ -1,29 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flex Header</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <div class="header">
-      <div class="left-links">
-        <ul>
-          <li><a href="#">ONE</a></li>
-          <li><a href="#">TWO</a></li>
-          <li><a href="#">THREE</a></li>
-        </ul>
-      </div>
-      <div class="logo">LOGO</div>
-      <div class="right-links">
-        <ul>
-          <li><a href="#">FOUR</a></li>
-          <li><a href="#">FIVE</a></li>
-          <li><a href="#">SIX</a></li>
-        </ul>
-      </div>
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Flex Header</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+  <div class="header">
+    <div class="links">
+      <ul>
+        <li><a href="#">HOME</a></li>
+        <li><a href="#">NEWS</a></li>
+        <li><a href="#">SHOP</a></li>
+        <li><a href="#">ABOUT</a></li>
+        <li><a href="#">JOBS</a></li>
+        <li><a href="#">CONTACT</a></li>
+      </ul>
     </div>
-  </body>
+    <div class="logo"><img
+        src="https://static.vecteezy.com/system/resources/thumbnails/008/214/517/small_2x/abstract-geometric-logo-or-infinity-line-logo-for-your-company-free-vector.jpg">
+    </div>
+    </div>
+</body>
+
 </html>
