Sync 0603 exercises (ongoing)

--- a/20240603/afternoon/exercise 1/index.html
+++ b/20240603/afternoon/exercise 1/index.html
@@ -9,6 +9,15 @@
   <script src="script.js" defer></script>
 </head>
 
+<!-- Exercise 1: Basic Counter:
+● Create an HTML document with a button labeled "Increment" and a <div>
+element to display the count.
+● Write JavaScript code to initialize a counter variable and update its value
+when the "Increment" button is clicked.
+● Display the updated count in the <div> element.
+● Use CSS to style the button and count display to make them visually
+appealing. -->
+
 
 <body>
   <button id="incrementButton">Increment</button>
