Edit projects Pizzeria and Chop Chop -- Add footer to Pizzeria page -- Rename Chop Chop folder to fix broken favicon issue

--- a/--- Projects/Mini App - "Chop Chop"/index.html
+++ b/--- Projects/Mini App - "Chop Chop"/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-Support English 
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Chop Chop To Do App</title>
   <link rel="stylesheet" href="css/styles.css">
   <script defer src="javascript/main.js"></script>
 </head>
@@ -18,8 +16,8 @@ Support English
       <div class="slogan1">Get Things Done</div>
       <div class="slogan2">With Chop Chop!</div>
     </div>
-    <div id="main-image">
-      <img class="main-img" src="images/chop_chop_main_img.png">
+    <div id="main-image-div">
+      <img class="main-image" src="images/chop_chop_main_img.png">
     </div>
   </div>
 
@@ -28,7 +26,7 @@ Support English
     <div class="app-part">
 
       <div class="input-part">
-        <input id="inputButton" placeholder="Enter a task">
+        <input id="taskinputField" placeholder="Enter a task">
         <button id="addTaskButton">Add task</button>
       </div>
 
