--- a/--- Projects/Static Page - Pizzeria Da Nono/index.html
+++ b/--- Projects/Static Page - Pizzeria Da Nono/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Pizzeria Da Nono</title>
   <link rel="stylesheet" href="css/styles.css">
   <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 </head>
@@ -36,9 +36,23 @@
     <p>Saturday - Sunday: 12:00 PM - 11:00 PM</p>
   </main>
 
-  <footer>
-    <p>Contact us: +49 123 456-7890</p> <p>info@pizzeriadonono.com</p>
-    <p>&copy; 2024 Pizzeria Da Nono</p>
+  <footer class="footer">
+    <div class="footer-section">
+      <img src="images/phone-icon.png" alt="Phone Icon" class="footer-icon">
+      <p>+49 123 456-7890</p>
+    </div>
+    <div class="footer-section">
+      <img src="images/email-icon.png" alt="Email Icon" class="footer-icon">
+      <p>info@pizzeriadonono.com</p>
+    </div>
+    <div class="footer-section">
+      <img src="images/facebook-icon.png" alt="Facebook Icon" class="footer-icon">
+      <p>Facebook</p>
+    </div>
+    <div class="footer-section">
+      <img src="images/instagram-icon.png" alt="Instagram Icon" class="footer-icon">
+      <p>Instagram</p>
+    </div>
   </footer>
 
 </body>
