--- a/--- Projects/Mini App - "Chop Chop"/index.html
+++ b/--- Projects/Mini App - "Chop Chop"/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,39 +11,37 @@
 
 <body>
 
-  <div class="container1">
+  <section class="hero-container">
     <img class="banner" src="images/chop_chop_banner2.png">
-    <div class="slogan">
-      <div class="slogan1">Get Things Done</div>
-      <div class="slogan2">With Chop Chop!</div>
+    <div class="slogan-container">
+      <div class="slogan slogan-1stline">Get Things Done</div>
+      <div class="slogan slogan-2ndline">With Chop Chop!</div>
     </div>
-    <div id="main-image-div">
+    <div id="main-image-container">
       <img class="main-image" src="images/chop_chop_main_img.png">
     </div>
-  </div>
+  </section>
 
-  <div class="container2">
+  <section class="app-container">
 
-    <div class="app-part">
-
-      <div class="input-part">
-        <input id="taskinputField" placeholder="Enter a task">
-        <button id="addTaskButton">Add task</button>
+      <div class="input-container">
+        <input id="task-input" placeholder="Enter a task">
+        <button id="add-task">Add task</button>
       </div>
 
-        <div class="todo-part">
+      <div class="lists-container">
+        
+        <div class="todo-container">
           <h2><span class="todo-symbol">To Do</span></h2>
-          <ul id="todoList"></ul>
+          <div id="todo-list"></div>
         </div>
-
-        <div class="done-part">
+        <div class="done-container">
           <h2><span class="done-symbol">Done</span></h2>
-          <ul id="doneList"></ul>
+          <div id="done-list"></div>
         </div>
+      </div>
 
-    </div>
-
-  </div>
+  </section>
 
 </body>
 
