--- a/--- Projects/Static Page - Pizzeria Da Nono/index.html
+++ b/--- Projects/Static Page - Pizzeria Da Nono/index.html
@@ -39,19 +39,19 @@
   <footer class="footer">
     <div class="footer-section">
       <img src="images/phone-icon.png" alt="Phone Icon" class="footer-icon">
-      <p>+49 123 456-7890</p>
+      <p><a href="#">+49 123 456-7890</a></p>
     </div>
     <div class="footer-section">
       <img src="images/email-icon.png" alt="Email Icon" class="footer-icon">
-      <p>info@pizzeriadonono.com</p>
+      <p><a href="mailto:info@pizzeriadonono.com">info@pizzeriadonono.com</a></p>
     </div>
     <div class="footer-section">
       <img src="images/facebook-icon.png" alt="Facebook Icon" class="footer-icon">
-      <p>Facebook</p>
+      <p><a href="#">Facebook</a></p>
     </div>
     <div class="footer-section">
       <img src="images/instagram-icon.png" alt="Instagram Icon" class="footer-icon">
-      <p>Instagram</p>
+      <p><a href="#">Instagram</a></p>
     </div>
   </footer>
 
