D018-EX1 Style display + start display hidden -- Change display style -- Issue: empty display box showing at start -- Fix: add hidden class, removed at click

--- a/20240603/afternoon_day_18_exercises/exercise 1/index.html
+++ b/20240603/afternoon_day_18_exercises/exercise 1/index.html
@@ -20,9 +20,9 @@ appealing. -->
 
 
 <body>
-  <button id="incrementButton">Increment</button>
+  <button id="increment-button">Increment</button>
   <br>
-  <div id="updatedCountDisplay"></div>
+  <div id="count-container" class="hidden"></div>
 </body>
 
 </html>
