Correct innerHTML in all files, Continue D018EX2

--- a/20240603/afternoon_day_18_exercises/exercise 2/index.html
+++ b/20240603/afternoon_day_18_exercises/exercise 2/index.html
@@ -19,15 +19,14 @@ address format.
 are invalid.
 ● Use CSS to style the form elements and messages for clarity. -->
 
-
 <body>
+  <h1>I'm a form! Fill me!</h1>
   <div>Please enter your information below.</div>
-  <div>Name:</div>
-  <input id="userNameInput" default="Name">
+  <div >Name:</div>
+  <input id="name-input" default="Name">
   <div>Email:</div>
-  <input id="userEmailInput" default="Email">
-  <button id="submitButton">Submit</button>
-  <div id="validationMessageDisplay"></div>
+  <input id="email-input" default="Email">
+  <button id="submit-button">Submit</button>
+  <div id="validation-message"></div>
 </body>
-
 </html>
