--- a/--- Projects/-PIZZ-/index.html
+++ b/--- Projects/-PIZZ-/index.html
@@ -7,25 +7,34 @@
   <title>Pizzeria Da Nono</title>
   <link rel="stylesheet" href="css/styles.css">
   <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+  <script src="javascript/main.js" defer></script>
 </head>
 
 <body>
 
   <header>
     <nav>
-      <a href="#home"><img src="images/pizza-logo-black.png" alt="A logo of a pizza with salami, olives and bell peppers" width="50px"></a>
+      <div class="header-left">
+        <div class="menu-toggle" onclick="toggleMenu()"><img id="menu-button-img" src="images/menu_lines.png"></div>
+      </div>
+      <div class="header-right">
+      <div class="logo">
+        <img src="images/pizza-logo-black.png" alt="A logo of a pizza with salami, olives and bell peppers" width="50px">
+      </div>
       <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#home">Menu</a></li>
-        <li><a href="#facebook">Facebook</a></li>
-        <li><a href="#instagram">Instagram</a></li>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#menu">Menu</a></li>
+          <li><a href="#order">Order</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#gallery">Gallery</a></li>
       </ul>
+      </div>
     </nav>
   </header>
 
   <section class="hero">
     <h1>Pizzeria Da Nono</h1>
-    <div class="order-button"><a href="#order">Order Now</a></div>
+    <button class="order-button" onclick=""><a href="#order">Order Now</a></button>
   </section>
 
   <main class="info">
@@ -39,19 +48,19 @@
   <footer class="footer">
     <div class="footer-section">
       <img src="images/phone-icon.png" alt="Phone Icon" class="footer-icon">
-      <p><a href="#">+49 123 456-7890</a></p>
+      <p><a href="#phone">+49 123 456-7890</a></p>
     </div>
     <div class="footer-section">
       <img src="images/email-icon.png" alt="Email Icon" class="footer-icon">
-      <p><a href="mailto:info@pizzeriadonono.com">info@pizzeriadonono.com</a></p>
+      <p><a href="#email">info@pizzeriadonono.com</a></p>
     </div>
     <div class="footer-section">
       <img src="images/facebook-icon.png" alt="Facebook Icon" class="footer-icon">
-      <p><a href="#">Facebook</a></p>
+      <p><a href="#facebook">Facebook</a></p>
     </div>
     <div class="footer-section">
       <img src="images/instagram-icon.png" alt="Instagram Icon" class="footer-icon">
-      <p><a href="#">Instagram</a></p>
+      <p><a href="#instagram">Instagram</a></p>
     </div>
   </footer>
 
