--- a/_Projects/-PIZZ-/gallery.html
+++ b/_Projects/-PIZZ-/gallery.html
@@ -19,8 +19,8 @@
       </div>
       <div class="header-right">
         <div class="logo">
-            <img src="images/pizza-logo-black.png" alt="A logo of a pizza with salami, olives and bell peppers"
-              width="50px">
+          <img src="images/pizza-logo-black.png" alt="A logo of a pizza with salami, olives and bell peppers"
+            width="50px">
         </div>
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -34,17 +34,28 @@
     </nav>
   </header>
 
-  <section class="hero">
+  <section class="top-section">
     <h1>Pizzeria Da Nono</h1>
-    <button class="order-button" onclick=""><a href="order.html">Order Now</a></button>
+    <h1>Gallery</h1>
   </section>
 
-  <main class="info">
-    <h2>Our Location</h2>
-    <p>Zionskirchstr., 10119 Berlin</p>
-    <h2>Opening Hours</h2>
-    <p>Monday - Friday: 11:00 AM - 10:00 PM</p>
-    <p>Saturday - Sunday: 12:00 PM - 11:00 PM</p>
+  <main class="gallery">
+    <div><img src="images/gallery/gallery_1.jpg" alt="Gallery Image 1" /></div>
+    <div><img src="images/gallery/gallery_2.jpg" alt="Gallery Image 2" /></div>
+    <div><img src="images/gallery/gallery_3.jpg" alt="Gallery Image 3" /></div>
+    <div><img src="images/gallery/gallery_4.jpg" alt="Gallery Image 4" /></div>
+    <div><img src="images/gallery/gallery_5.jpg" alt="Gallery Image 5" /></div>
+    <div><img class="portrait" src="images/gallery/gallery_6.jpg" alt="Gallery Image 6" /></div>
+    <div><img class="portrait" src="images/gallery/gallery_7.jpg" alt="Gallery Image 7" /></div>
+    <div><img class="portrait" src="images/gallery/gallery_8.jpg" alt="Gallery Image 8" /></div>
+    <div><img class="portrait" src="images/gallery/gallery_9.jpg" alt="Gallery Image 9" /></div>
+    <div><img class="portrait" src="images/gallery/gallery_10.jpg" alt="Gallery Image 10" /></div>
+    <div><img class="portrait" src="images/gallery/gallery_11.jpg" alt="Gallery Image 11" /></div>
+    <div><img class="portrait" src="images/gallery/gallery_12.jpg" alt="Gallery Image 12" /></div>
+    <div><img class="portrait" src="images/gallery/gallery_13.jpg" alt="Gallery Image 13" /></div>
+    <div><img class="portrait" src="images/gallery/gallery_14.jpg" alt="Gallery Image 14" /></div>
+    <div><img src="images/gallery/gallery_15.jpg" alt="Gallery Image 15" /></div>
+    <div><img class="portrait" src="images/gallery/gallery_16.jpg" alt="Gallery Image 16" /></div>
   </main>
 
   <footer class="footer">
