--- a/_Projects/DUMP/Static Page - Pizzeria Da Nono/index.html
+++ b/_Projects/DUMP/Static Page - Pizzeria Da Nono/index.html
@@ -43,7 +43,7 @@
     </div>
     <div class="footer-section">
       <img src="images/email-icon.png" alt="Email Icon" class="footer-icon">
-      <p><a href="mailto:info@pizzeriadonono.com">info@pizzeriadonono.com</a></p>
+      <p><a href="mailto:info@danono.com">info@danono.com</a></p>
     </div>
     <div class="footer-section">
       <img src="images/facebook-icon.png" alt="Facebook Icon" class="footer-icon">
