-PIZZ- Add Order page pics & fix global max width -- Images: Add photos for Order page -- CSS: Fix alignment of text in Order page cards -- CSS: Fix max width to prevent containers stretching too wide on large screens

--- a/_Projects/-PIZZ-/order.html
+++ b/_Projects/-PIZZ-/order.html
@@ -44,7 +44,7 @@
       <h2>Pizza</h2>
       <div class="order-category">
         <div class="order-item">
-          <img src="images/margherita.jpg" alt="Margherita Pizza">
+          <img src="images/order/margherita.jpg" alt="Margherita Pizza">
           <div class="item-name">Margherita</div>
           <div class="item-ingredients">Tomato, Mozzarella, Basil</div>
           <div class="item-info">Vegetarian</div>
@@ -52,7 +52,7 @@
           <button class="add-to-cart">+</button>
         </div>
         <div class="order-item">
-          <img src="images/marinara.jpg" alt="Marinara Pizza">
+          <img src="images/order/marinara.jpg" alt="Marinara Pizza">
           <div class="item-name">Marinara</div>
           <div class="item-ingredients">Tomato, Garlic, Oregano</div>
           <div class="item-info">Vegan</div>
@@ -60,7 +60,7 @@
           <button class="add-to-cart">+</button>
         </div>
         <div class="order-item">
-          <img src="images/quattro-stagioni.jpg" alt="Quattro Stagioni Pizza">
+          <img src="images/order/quattro_stagioni.jpg" alt="Quattro Stagioni Pizza">
           <div class="item-name">Quattro Stagioni</div>
           <div class="item-ingredients">Tomato, Mozzarella, Artichokes, Ham, Mushrooms, Olives</div>
           <div class="item-info"></div>
@@ -68,7 +68,7 @@
           <button class="add-to-cart">+</button>
         </div>
         <div class="order-item">
-          <img src="images/pepperoni.jpg" alt="Pepperoni Pizza">
+          <img src="images/order/pepperoni.jpg" alt="Pepperoni Pizza">
           <div class="item-name">Pepperoni</div>
           <div class="item-ingredients">Tomato, Mozzarella, Pepperoni</div>
           <div class="item-info"></div>
@@ -76,7 +76,7 @@
           <button class="add-to-cart">+</button>
         </div>
         <div class="order-item">
-          <img src="images/vegetarian.jpg" alt="Vegetarian Pizza">
+          <img src="images/order/vegetarian.jpg" alt="Vegetarian Pizza">
           <div class="item-name">Vegetarian</div>
           <div class="item-ingredients">Tomato, Mozzarella, Bell Peppers, Onions, Olives</div>
           <div class="item-info">Vegetarian</div>
@@ -84,7 +84,7 @@
           <button class="add-to-cart">+</button>
         </div>
         <div class="order-item">
-          <img src="images/hawaiian.jpg" alt="Hawaiian Pizza">
+          <img src="images/order/hawaiian.jpg" alt="Hawaiian Pizza">
           <div class="item-name">Hawaiian</div>
           <div class="item-ingredients">Tomato, Mozzarella, Ham, Pineapple</div>
           <div class="item-info"></div>
@@ -92,7 +92,7 @@
           <button class="add-to-cart">+</button>
         </div>
         <div class="order-item">
-          <img src="images/diavola.jpg" alt="Diavola Pizza">
+          <img src="images/order/diavola.jpg" alt="Diavola Pizza">
           <div class="item-name">Diavola</div>
           <div class="item-ingredients">Tomato, Mozzarella, Spicy Salami</div>
           <div class="item-info"></div>
@@ -100,7 +100,7 @@
           <button class="add-to-cart">+</button>
         </div>
         <div class="order-item">
-          <img src="images/four-cheese.jpg" alt="Four Cheese Pizza">
+          <img src="images/order/quattro_formaggi.jpg" alt="Four Cheese Pizza">
           <div class="item-name">Four Cheese</div>
           <div class="item-ingredients">Mozzarella, Gorgonzola, Parmesan, Goat Cheese</div>
           <div class="item-info">Vegetarian</div>
@@ -111,7 +111,7 @@
       <h2>Pasta</h2>
       <div class="order-category">
         <div class="order-item">
-          <img src="images/carbonara.jpg" alt="Spaghetti Carbonara">
+          <img src="images/order/carbonara.jpg" alt="Spaghetti Carbonara">
           <div class="item-name">Spaghetti Carbonara</div>
           <div class="item-ingredients">Eggs, Pecorino Cheese, Guanciale, Black Pepper</div>
           <div class="item-info"></div>
@@ -119,7 +119,7 @@
           <button class="add-to-cart">+</button>
         </div>
         <div class="order-item">
-          <img src="images/lasagna.jpg" alt="Lasagna">
+          <img src="images/order/lasagna.jpg" alt="Lasagna">
           <div class="item-name">Lasagna</div>
           <div class="item-ingredients">Layers of Pasta, Bolognese Sauce, Béchamel, Parmesan</div>
           <div class="item-info"></div>
@@ -127,7 +127,7 @@
           <button class="add-to-cart">+</button>
         </div>
         <div class="order-item">
-          <img src="images/ravioli.jpg" alt="Ravioli">
+          <img src="images/order/ravioli.jpg" alt="Ravioli">
           <div class="item-name">Ravioli</div>
           <div class="item-ingredients">Stuffed Pasta with Ricotta and Spinach</div>
           <div class="item-info">Vegetarian</div>
@@ -138,7 +138,7 @@
       <h2>Salads</h2>
       <div class="order-category">
         <div class="order-item">
-          <img src="images/caesar-salad.jpg" alt="Caesar Salad">
+          <img src="images/order/caesar.jpg" alt="Caesar Salad">
           <div class="item-name">Caesar Salad</div>
           <div class="item-ingredients">Romaine Lettuce, Croutons, Parmesan, Caesar Dressing</div>
           <div class="item-info"></div>
@@ -146,7 +146,7 @@
           <button class="add-to-cart">+</button>
         </div>
         <div class="order-item">
-          <img src="images/caprese-salad.jpg" alt="Caprese Salad">
+          <img src="images/order/caprese.jpg" alt="Caprese Salad">
           <div class="item-name">Caprese Salad</div>
           <div class="item-ingredients">Tomatoes, Mozzarella, Basil, Olive Oil</div>
           <div class="item-info">Vegetarian</div>
