--- a/_Projects/-PIZZ-/about.html
+++ b/_Projects/-PIZZ-/about.html
@@ -41,18 +41,28 @@
 
   <main class="about">
     <section class="about-content">
+      <div class="about-container">
+      <div class="about-side-container">
+        <img class="about-img" src="images/nono_pizzaiolo.jpg" alt="A photograh of Nono, our chef pizzaiolo, in their kitchen.">
+      </div>
       <p>
         Founded by the innovative and passionate chef Nono in 2018, our restaurant is a vibrant blend of traditional cuisine and modern aesthetics. Nono envisioned a place where the rich flavors of traditional recipes could be enjoyed in a contemporary and lively setting.
       </p>
+      </div>
       <p>
         From the moment you step inside, you are greeted by a dynamic atmosphere that is both welcoming and exhilarating. Our eclectic decor features a mix of kitsch and retro furniture, complemented by striking pieces of art that add a unique flair to the dining experience. The pulsating beats of electro music set the tone, creating an energetic backdrop for memorable meals.
       </p>
       <p>
         At the heart of our restaurant is a commitment to culinary excellence. Nono's dedication to using fresh, high-quality ingredients and time-honored cooking techniques ensures that each dish is a celebration of tradition. Whether you are savoring a classic favorite or exploring new flavors, our menu offers something for every palate.
       </p>
-      <p>
-        Our space is designed to be more than just a place to eat; it is a community hub where people come together to enjoy great food, art, and music. We take pride in fostering an inclusive environment where everyone feels at home, and where the spirit of creativity and innovation thrives.
-      </p>
+      <div class="about-container">
+        <p>
+          Our space is designed to be more than just a place to eat; it is a community hub where people come together to enjoy great food, art, and music. We take pride in fostering an inclusive environment where everyone feels at home, and where the spirit of creativity and innovation thrives.
+        </p>
+        <div class="about-side-container">
+          <img class="about-img" src="images/danono_indoors.jpg" alt="A photograh of Danono's indoor dining area showing tables and booths.">
+        </div>
+        </div>
       <p>
         Join us for an unforgettable dining experience that bridges the gap between the old and the new. At our restaurant, tradition meets trend, and every visit promises to be a feast for the senses. Thank you for being a part of our journey, and we look forward to welcoming you soon.
       </p>
