--- a/_Projects/-PIZZ-/contact.html
+++ b/_Projects/-PIZZ-/contact.html
@@ -44,24 +44,28 @@
       <p>
         We'd love to hear from you! Whether you have a question about our menu, want to make a reservation, or just want to share your experience, please feel free to reach out. Fill out the form below, and we will get back to you as soon as possible.
       </p>
-      <form class="contact-form" action="#" method="post">
+      <form class="contact-form" id="contact-form" action="#" method="post">
         <div class="form-group">
           <label for="name">Name:</label>
-          <input type="text" id="name" name="name" required>
+          <input type="text" id="form-name-input" name="name" required>
+          <div class="error" id="name-error"></div>
         </div>
         <div class="form-group">
           <label for="email">Email:</label>
-          <input type="email" id="email" name="email" required>
+          <input type="email" id="form-email-input" name="email" required>
+          <div class="error" id="email-error"></div>
         </div>
         <div class="form-group">
           <label for="subject">Subject:</label>
-          <input type="text" id="subject" name="subject" required>
+          <input type="text" id="form-subject-input" name="subject" required>
+          <div class="error" id="subject-error"></div>
         </div>
         <div class="form-group">
           <label for="message">Message:</label>
-          <textarea id="message" name="message" rows="5" required></textarea>
+          <textarea id="message" name="form-message-input" rows="5" required></textarea>
+          <div class="error" id="message-error"></div>
         </div>
-        <button type="submit">Send Message</button>
+        <button type="form-submit-button">Send Message</button>
       </form>
     </section>
   </main>
