--- a/_Projects/-PIZZ-/about.html
+++ b/_Projects/-PIZZ-/about.html
@@ -27,7 +27,7 @@
           <li><a href="menu.html">Menu</a></li>
           <li><a href="order.html">Order</a></li>
           <li><a href="gallery.html">Gallery</a></li>
-          <li><a href="about.html">About</a></li>
+          <li><a href="about.html" aria-current="page">About</a></li>
           <li><a href="contact.html">Contact Us</a></li>
         </ul>
       </div>
