--- a/_Projects/-PIZZ-/contact.html
+++ b/_Projects/-PIZZ-/contact.html
@@ -28,7 +28,7 @@
           <li><a href="order.html">Order</a></li>
           <li><a href="gallery.html">Gallery</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="contact.html">Contact Us</a></li>
+          <li><a href="contact.html" aria-current="page">Contact Us</a></li>
         </ul>
       </div>
     </nav>
