--- a/_Projects/-PIZZ-/gallery.html
+++ b/_Projects/-PIZZ-/gallery.html
@@ -26,7 +26,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="menu.html">Menu</a></li>
           <li><a href="order.html">Order</a></li>
-          <li><a href="gallery.html">Gallery</a></li>
+          <li><a href="gallery.html" aria-current="page">Gallery</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="contact.html">Contact Us</a></li>
         </ul>
