--- a/_Projects/-PIZZ-/index.html
+++ b/_Projects/-PIZZ-/index.html
@@ -23,7 +23,7 @@
               width="50px">
         </div>
         <ul>
-          <li><a href="index.html">Home</a></li>
+          <li><a href="index.html" aria-current="page">Home</a></li>
           <li><a href="menu.html">Menu</a></li>
           <li><a href="order.html">Order</a></li>
           <li><a href="gallery.html">Gallery</a></li>
