--- a/_Projects/-PIZZ-/menu.html
+++ b/_Projects/-PIZZ-/menu.html
@@ -24,7 +24,7 @@
         </div>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="menu.html">Menu</a></li>
+          <li><a href="menu.html" aria-current="page">Menu</a></li>
           <li><a href="order.html">Order</a></li>
           <li><a href="gallery.html">Gallery</a></li>
           <li><a href="about.html">About</a></li>
