-PIZZ- Fix "hamburger" button & some img alt -- Fix hamburger button -> turn simple img into input type=image. -- Add or fix some img alts

--- a/_Projects/-PIZZ-/about.html
+++ b/_Projects/-PIZZ-/about.html
@@ -15,11 +15,11 @@
   <header>
     <nav>
       <div class="header-left">
-        <div class="menu-toggle" onclick="toggleMenu()"><img id="menu-button-img" src="images/menu_lines.png"></div>
+        <div class="menu-toggle" onclick="toggleMenu()"><input type="image" id="menu-button-img" class="menu-toggle-img" src="images/menu_lines.png" alt="Button to select to open/close collapsible menu"></div>
       </div>
       <div class="header-right">
         <div class="logo">
-          <img src="images/pizza-logo-black.png" alt="A logo of a pizza with salami, olives and bell peppers"
+          <img src="images/pizza-logo-black.png" alt="A logo showing a pizza slice"
             width="50px">
         </div>
         <ul>
@@ -60,7 +60,7 @@
           Our space is designed to be more than just a place to eat; it is a community hub where people come together to enjoy great food, art, and music. We take pride in fostering an inclusive environment where everyone feels at home, and where the spirit of creativity and innovation thrives.
         </p>
         <div class="about-side-container">
-          <img class="about-img" src="images/danono_indoors.jpg" alt="A photograh of Danono's indoor dining area showing tables and booths.">
+          <img class="about-img" src="images/danono_indoors.jpg" alt="A photograh of Da Nono's indoor dining area showing tables and booths.">
         </div>
         </div>
       <p>
