--- a/_Projects/-PIZZ-/gallery.html
+++ b/_Projects/-PIZZ-/gallery.html
@@ -15,11 +15,11 @@
   <header>
     <nav>
       <div class="header-left">
-        <div class="menu-toggle" onclick="toggleMenu()"><img id="menu-button-img" src="images/menu_lines.png"></div>
+        <div class="menu-toggle" onclick="toggleMenu()"><input type="image" id="menu-button-img" class="menu-toggle-img" src="images/menu_lines.png" alt="Button to select to open/close collapsible menu"></div>
       </div>
       <div class="header-right">
         <div class="logo">
-          <img src="images/pizza-logo-black.png" alt="A logo of a pizza with salami, olives and bell peppers"
+          <img src="images/pizza-logo-black.png" alt="A logo showing a pizza slice"
             width="50px">
         </div>
         <ul>
